@@ -74,7 +74,7 @@
       (mapc (lambda (s)
 	      (let ((w (document-slot s)))
 		(set-slot-layout s w)
-		(if (memq 'expand (slot-flags s))
+		(if (memq 'expand-vertically (slot-flags s))
 		    (gtk-box-pack-start box w t t)
 		  (gtk-box-pack-start box w)))) slots)
       (gtk-widget-show box)
@@ -111,21 +111,23 @@
 
 	  (setq doc (remove-newlines (car split)))
 	  (if (memq 'framed (slot-flags slot))
-	      (let ((frame (gtk-frame-new doc)))
-		(gtk-container-border-width frame box-border)
-		(gtk-frame-set-shadow-type frame 'none)
-		(gtk-container-add frame (slot-gtk-widget slot))
-		(setq frame (add-tooltip frame))
-		(gtk-widget-show-all frame)
-		frame)
-
+	      (let ((hbox (gtk-hbox-new nil 0))
+		    (vbox (gtk-vbox-new nil 0)))
+		(gtk-box-pack-start hbox (gtk-label-new doc))
+		(gtk-box-pack-start vbox hbox)
+		(gtk-box-pack-start vbox (slot-gtk-widget slot) t t)
+		(setq vbox (add-tooltip vbox))
+		(gtk-widget-show-all vbox)
+		vbox)
 	    (let ((hbox (gtk-hbox-new nil box-spacing))
 		  (break (if (string-match "\\\\w" doc)
 			     (match-start)
 			   -2)))
 	      (when (> break 0)
 		(gtk-box-pack-start hbox (make-label (substring doc 0 break))))
-	      (gtk-box-pack-start hbox (slot-gtk-widget slot))
+	      (if (memq 'expand-horizontally (slot-flags slot))
+		  (gtk-box-pack-start hbox (slot-gtk-widget slot) t t)
+		(gtk-box-pack-start hbox (slot-gtk-widget slot) nil nil))
 	      (when (< break (length doc))
 		(gtk-box-pack-start
 		 hbox (make-label (substring doc (+ break 2)))))
